TTT12 - UI issues when left menu is pinned open
(Narrow screen with modal prompt open (i.e Configure User Database), the modal page is drawn underneath the menu:
When the screen is greyed out, for example by clicking the power button at bottom right, the menu is not greyed out and looks odd)

Reduced z-index for side menu will be covered now by modal.

--- a/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
+++ b/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
@@ -747,7 +747,7 @@ header .navbar {
 	top: 51px;
 	bottom: 51px;
 	left: 0px;
-	z-index: 8888;
+	z-index: 1030;
 	overflow-y: auto;
 }
 
